Начал писать шапку

--- a/index.html
+++ b/index.html
@@ -3,10 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Девайс</title>
+      <h1>Девайс</h1>
+        <img src="https://via.placeholder.com/163x35" alt="логотип компании">
+          <section>
+          <ul>
+            <li>
+              <form action="https://echo.htmlacademy.ru" method="POST">
+                <input id="search" type="search" placeholder="Поиск по сайту">
+              </form>
+            </li>
+            <li>
+              <button type="button">Войти</button>
+            </li>
+            <li>
+              <button type="button">Сравнить</button>
+            </li>
+            <li>
+              <button type="button">Корзина</button>
+            </li>
+          </ul>
+          </section>
+      <nav>
+        <ul>
+          <li>
+            <a href="catalog.html">Каталог товаров</a>
+            <button type="button"></button>
+          </li>
+          <li>
+            <a href="#">Доставка</a>
+          </li>
+          <li>
+            <a href="#">Гарантия</a>
+          </li>
+          <li>
+            <a href="#">Контакты</a>
+          </li>
+        </ul>
+      </nav>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
 </html>
