--- a/index.html
+++ b/index.html
@@ -41,6 +41,54 @@
         </ul>
       </nav>
   </head>
+   <main>
+      <section>
+         <h2>Слайдер</h2>
+         <img src="https://via.placeholder.com/384x486">
+         <p>Делай селфи, как Бен Стиллер!</p>
+         <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
+            Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
+         <button type="button">Подробнее</button>
+         <input type="button" checked> <input type="button"> <input type="button">
+         <table>
+            <tr>
+               <th>8,5 м</th>
+               <th>5 кг</th>
+               <th>Карбон</th>
+            </tr>
+            <tr>
+               <td>Длина палки</td>
+               <td>Вес палки</td>
+               <td>Материал</td>
+            </tr>
+         </table>
+      </section>
+         <section>
+            <h2>Категории товаров</h2>
+               <ul>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Виртуальная реальность</li>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Моноподы для селфи</li>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Экшн-камеры</li>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Фитнес-браслеты</li>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Умные часы</li>
+                  <img src="https://via.placeholder.com/160x160">
+                  <li>Квадрокоптеры</li>
+               </ul>
+         </section>
+            <section>
+               <h2>Доставка</h2>
+               <ul>
+                  <li>Доставка</li>
+                  <li>Гарантия</li>
+                  <li>Кредит</li>
+               </ul>
+            </section>
+   </main>
   <body>
 
 
