--- a/index.html
+++ b/index.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Девайс</title>
-      <h1>Девайс</h1>
-        <img src="https://via.placeholder.com/163x35" alt="логотип компании">
-          <section>
-          <ul>
-            <li>
-              <form action="https://echo.htmlacademy.ru" method="POST">
-                <input id="search" type="search" placeholder="Поиск по сайту">
-              </form>
-            </li>
-            <li>
-              <button type="button">Войти</button>
-            </li>
-            <li>
-              <button type="button">Сравнить</button>
-            </li>
-            <li>
-              <button type="button">Корзина</button>
-            </li>
-          </ul>
-          </section>
-      <nav>
-        <ul>
-          <li>
+
+<head>
+   <meta charset="utf-8">
+   <title>HTML Academy: Девайс</title>
+
+   <head></head>
+
+<body>
+   <h1>Девайс</h1>
+   <img src="https://via.placeholder.com/163x35" alt="логотип компании">
+   <section>
+      <ul>
+         <li>
+            <form action="https://echo.htmlacademy.ru" method="POST">
+               <input id="search" type="search" placeholder="Поиск по сайту">
+            </form>
+         </li>
+         <li>
+            <button type="button">Войти</button>
+         </li>
+         <li>
+            <button type="button">Сравнить</button>
+         </li>
+         <li>
+            <button type="button">Корзина</button>
+         </li>
+      </ul>
+   </section>
+   <nav>
+      <ul>
+         <li>
             <a href="catalog.html">Каталог товаров</a>
             <button type="button"></button>
-          </li>
-          <li>
+         </li>
+         <li>
             <a href="#">Доставка</a>
-          </li>
-          <li>
+         </li>
+         <li>
             <a href="#">Гарантия</a>
-          </li>
-          <li>
+         </li>
+         <li>
             <a href="#">Контакты</a>
-          </li>
-        </ul>
-      </nav>
-  </head>
+         </li>
+      </ul>
+   </nav>
    <main>
       <section>
          <h2>Слайдер</h2>
-         <img src="https://via.placeholder.com/384x486">
+         <img src="https://via.placeholder.com/384x486" alt="product">
          <p>Делай селфи, как Бен Стиллер!</p>
          <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
             Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -63,34 +67,86 @@
             </tr>
          </table>
       </section>
-         <section>
-            <h2>Категории товаров</h2>
-               <ul>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Виртуальная реальность</li>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Моноподы для селфи</li>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Экшн-камеры</li>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Фитнес-браслеты</li>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Умные часы</li>
-                  <img src="https://via.placeholder.com/160x160">
-                  <li>Квадрокоптеры</li>
-               </ul>
-         </section>
-            <section>
-               <h2>Доставка</h2>
-               <ul>
-                  <li>Доставка</li>
-                  <li>Гарантия</li>
-                  <li>Кредит</li>
-               </ul>
-            </section>
+      <section>
+         <h2>Категории товаров</h2>
+         <ul>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Виртуальная реальность</a></li>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Моноподы для селфи</a></li>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Экшн-камеры</a></li>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Фитнес-браслеты</a></li>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Умные часы</a></li>
+            <img src="https://via.placeholder.com/160x160" alt="product">
+            <li><a href="#">Квадрокоптеры</a></li>
+         </ul>
+      </section>
+      <section>
+         <h2>Доставка</h2>
+         <button type="button">Доставка</button>
+         <h2>Доставка</h2>
+         <p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
+            подъезду совершенно бесплатно! Ведь мы неплохо<br>
+            заработаем, поднимая
+            его на ваш этаж.</p>
+         <button type="button">Гарантия</button><br>
+         <button type="button">Кредит</button>
+      </section>
+      <section>
+         <h2>Партнеры</h2>
+         <ul>
+            <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
+            <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
+            <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
+            <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
+         </ul>
+      </section>
+      <section>
+         <h2>О нас</h2>
+         <p>Огромный выбор гаджетов не оставит равнодушным гика,<br>
+            который есть в каждом из нас.</p>
+         <p>Мы можем доставить ваш товар в самые отдаленные точки<br>
+            России! DEVICE работает со многими транспортными компаниями:</p>
+         <ul>
+            <li>Деловые линии</li>
+            <li>Автотрейдинг</li>
+            <li>ЖэлДорЭкспедиция</li>
+         </ul>
+         <button type="button">Подробнее о нас</button>
+      </section>
+      <section>
+         <h2>Контакты</h2>
+         <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
+            проверить работоспособность покупки. Всякое бывает.</p>
+         <img src="https://via.placeholder.com/560x222" alt="map">
+      </section>
    </main>
-  <body>
+</body>
+<footer>
+   <img src="https://via.placeholder.com/163x35" alt="logo">
+   <p>г. Москва, ул. Строителей, 15</p>
+   <ul>
+      <li><a href="#">Доставка</a></li>
+      <li><a href="#">Гарантия</a></li>
+      <li><a href="#">Контакты</a></li>
+   </ul>
+   <ul>
+      <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="vk"></a></li>
+      <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="in"></a></li>
+      <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="tw"></a></li>
+   </ul>
+   <ul>
+      <li><a href="#">Войти</a></li>
+      <li><a href="#">Сравнить</a></li>
+      <li><a href="#">Корзина</a></li>
+   </ul>
+   <p>
+      <tel:+74954959595>+7 (495) 495 95 95</tel:>
+   </p>
+   <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
+</footer>
 
-
-  </body>
 </html>
