Закончил index.html и catalog.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Девайс</h1>
-    <img src="https://via.placeholder.com/163x35" alt="логотип компании">
+    <img src="https://via.placeholder.com/163x35" alt="logo">
     <section>
       <ul>
         <li>
@@ -71,22 +71,27 @@
     <section>
       <h2>Категории товаров</h2>
       <ul>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Виртуальная реальность</a></li>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Моноподы для селфи</a></li>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Экшн-камеры</a></li>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Фитнес-браслеты</a></li>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Умные часы</a></li>
-        <img src="https://via.placeholder.com/160x160" alt="product">
-        <li><a href="#">Квадрокоптеры</a></li>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Виртуальная реальность</li>
+        </a>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Моноподы для селфи</li>
+        </a>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Экшн-камеры</li>
+        </a>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Фитнес-браслеты</li>
+        </a>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Умные часы</li>
+        </a>
+        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+          <li>Квадрокоптеры</li>
+        </a>
       </ul>
     </section>
     <section>
-      <h2>Доставка</h2>
       <button type="button">Доставка</button>
       <h2>Доставка</h2>
       <p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
