--- a/catalog.html
+++ b/catalog.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Катало Device</title>
 </head>
 
 <body>
   <header>
     <h1>Девайс</h1>
-    <img src="https://via.placeholder.com/163x35" alt="логотип компании">
+    <img src="https://via.placeholder.com/163x35" alt="logo">
     <section>
       <ul>
         <li>
@@ -59,24 +59,125 @@
       <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Стоимость</legend>
-          <!--Как сделать ползунок и что вообще в ним делать?-->
+          <input type="range" min="0" max="100" step="1" value="50">
+          <!--Как правильно сделать ползунок и что вообще с ним делать?-->
         </fieldset>
         <fieldset>
           <legend>Цвет</legend>
           <ul>
             <li>
-              <input type="checkbox" name="Чёрный">
+              <input type="checkbox" name="black" id="filter-black" checked>
+              <label for="filter-black">Чёрный</label>
             </li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>
+              <input type="checkbox" name="white" id="filter-white">
+              <label for="filter-white">Белый</label>
+            </li>
+            <li>
+              <input type="checkbox" name="blue" id="filter-blue" checked>
+              <label for="filter-blue">Синий</label>
+            </li>
+            <li>
+              <input type="checkbox" name="red" id="filter-red" checked>
+              <label for="filter-red">Красный</label>
+            </li>
+            <li>
+              <input type="checkbox" name="pink" id="filter-pink">
+              <label for="filter-pink">Розовый</label>
+            </li>
           </ul>
         </fieldset>
         <fieldset>
           <legend>Bluetooth</legend>
+          <ul>
+            <li>
+              <input type="radio" name="bluetooth" id="filter-there-is" checked>
+              <label for="filter-there-is">Есть</label>
+            </li>
+            <li>
+              <input type="radio" name="bluetooth" id="filter-no">
+              <label for="filter-no">Нет</label>
+            </li>
+          </ul>
         </fieldset>
+        <button type="submit">Показать</button>
       </form>
+    </section>
+    <section>
+      <h2>Список товаров</h2>
+      <ul>
+        <li>
+          <p>Сортировка</p>
+        </li>
+        <li>
+          <button type="button">По цене</button>
+        </li>
+        <li>
+          <button type="button">По типу</button>
+        </li>
+        <li>
+          <button type="button">По популярности</button>
+        </li>
+        <li>
+          <button type="button"></button>
+        </li>
+        <li>
+          <button type="button"></button>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <ul>
+        <li>
+          <a href="#">
+            <h3>Любительская селфи-палка</h3>
+            <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>
+            1 100 руб.
+            <button type="button">В корзину</button>
+            <button type="button">Добавить к сравнению</button>
+          </p>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Профессиональная селфи-палка</h3>
+            <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 500 руб.</p>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Непотопляемая селфи-палка</h3>
+            <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 500 руб.</p>
+        </li>
+        <li>
+          <a href="#">
+            <h3>Селфи-палка "Следуй за мной"</h3>
+            <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 900 руб.</p>
+        </li>
+      </ul>
+      <ul>
+        <li>
+          <a>Назад</a>
+        </li>
+        <li>
+          <a>1</a>
+        </li>
+        <li>
+          <a href="#">2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">Вперед</a>
+        </li>
+      </ul>
     </section>
   </main>
 </body>
@@ -99,7 +200,7 @@
     <li><a href="#">Корзина</a></li>
   </ul>
   <p>
-    <tel:+74954959595>+7 (495) 495 95 95</tel:>
+    <a href="tel:+74954959595">+7 (495) 495 95 95</a>
   </p>
   <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
 </footer>
