Внёс правки в index.html и catalog.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
   <header>
     <h1>Девайс</h1>
-    <img src="https://via.placeholder.com/163x35" alt="logo">
+    <a href="index.html">
+      <img src="https://via.placeholder.com/163x35" alt="logo">
+    </a>
     <section>
       <ul>
         <li>
@@ -17,6 +19,8 @@
             <input id="search" type="search" placeholder="Поиск по сайту">
           </form>
         </li>
+      </ul>
+      <ul>
         <li>
           <button type="button">Войти</button>
         </li>
@@ -31,8 +35,8 @@
     <nav>
       <ul>
         <li>
-          <a href="catalog.html">Каталог товаров</a>
-          <button type="button"></button>
+          <a href="catalog.html">Каталог товаров <div class="background-image"></a>
+          <!---Вопрос по декоративному элементу-->
         </li>
         <li>
           <a href="#">Доставка</a>
@@ -53,61 +57,93 @@
       <p>Делай селфи, как Бен Стиллер!</p>
       <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
         Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
-      <button type="button">Подробнее</button>
-      <input type="button" checked> <input type="button"> <input type="button">
-      <table>
-        <tr>
-          <th>8,5 м</th>
-          <th>5 кг</th>
-          <th>Карбон</th>
-        </tr>
-        <tr>
-          <td>Длина палки</td>
-          <td>Вес палки</td>
-          <td>Материал</td>
-        </tr>
-      </table>
+      <a href="catalog.html">Подробнее</a>
+      <ul>
+        <li>
+          <button type="button"></button>
+        </li>
+        <li>
+          <button type="button"></button>
+        </li>
+        <li>
+          <button type="button"></button>
+        </li>
+      </ul>
+      <ul>
+        <li>8,5 м</li>
+        <li>Длина палки</li>
+        <li>5 кг</li>
+        <li>Вес палки</li>
+        <li>Карбон</li>
+        <li>Материал</li>
+      </ul>
     </section>
     <section>
       <h2>Категории товаров</h2>
       <ul>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Виртуальная реальность</li>
         </a>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Моноподы для селфи</li>
         </a>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Экшн-камеры</li>
         </a>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Фитнес-браслеты</li>
         </a>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Умные часы</li>
         </a>
-        <a href="#"><img src="https://via.placeholder.com/160x160" alt="product">
+        <a href="#">
           <li>Квадрокоптеры</li>
         </a>
       </ul>
     </section>
     <section>
-      <button type="button">Доставка</button>
-      <h2>Доставка</h2>
-      <p>Мы с удовольствием доставим ваш товар прямо к вашему<br>
-        подъезду совершенно бесплатно! Ведь мы неплохо<br>
-        заработаем, поднимая
-        его на ваш этаж.</p>
-      <button type="button">Гарантия</button><br>
-      <button type="button">Кредит</button>
+      <ul>
+        <li>
+          <button type="button">Доставка</button>
+        </li>
+        <li>
+          <button type="button">Гарантия</button>
+        </li>
+        <li>
+          <button type="button">Кредит</button>
+        </li>
+      </ul>
+      <div class="">
+        <h2>Доставка</h2>
+        <p>Мы с удовольствием доставим ваш товар прямо к вашему
+          подъезду совершенно бесплатно! Ведь мы неплохо
+          заработаем, поднимая
+          его на ваш этаж.</p>
+      </div>
     </section>
     <section>
       <h2>Партнеры</h2>
       <ul>
-        <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
-        <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
-        <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
-        <li><img src="https://via.placeholder.com/260x100" alt="partnet"></li>
+        <li>
+          <a href="https://www.dji.com/ru">
+            <img src="https://via.placeholder.com/260x100" alt="dji">
+          </a>
+        </li>
+        <li>
+          <a href="http://www.sp-gadgets.com">
+            <img src="https://via.placeholder.com/260x100" alt="sp-gadgets">
+          </a>
+        </li>
+        <li>
+          <a href="https://gopro.com/ru/ru/">
+            <img src="https://via.placeholder.com/260x100" alt="gopro">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.vive.com/ru/">
+            <img src="https://via.placeholder.com/260x100" alt="vive">
+          </a>
+        </li>
       </ul>
     </section>
     <section>
@@ -121,18 +157,21 @@
         <li>Автотрейдинг</li>
         <li>ЖэлДорЭкспедиция</li>
       </ul>
-      <button type="button">Подробнее о нас</button>
+      <a href="#">Подробнее о нас</a>
     </section>
     <section>
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
         проверить работоспособность покупки. Всякое бывает.</p>
       <img src="https://via.placeholder.com/560x222" alt="map">
+      <button type="button">Напишите нам</button>
     </section>
   </main>
 </body>
 <footer>
-  <img src="https://via.placeholder.com/163x35" alt="logo">
+  <a href="index.html">
+    <img src="https://via.placeholder.com/163x35" alt="logo">
+  </a>
   <p>г. Москва, ул. Строителей, 15</p>
   <ul>
     <li><a href="#">Доставка</a></li>
@@ -140,9 +179,15 @@
     <li><a href="#">Контакты</a></li>
   </ul>
   <ul>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="vk"></a></li>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="in"></a></li>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="tw"></a></li>
+    <a href="#">
+      <li>vk</li>
+    </a>
+    <a href="#">
+      <li>inst</li>
+    </a>
+    <a href="#">
+      <li>tw</li>
+    </a>
   </ul>
   <ul>
     <li><a href="#">Войти</a></li>
@@ -150,9 +195,11 @@
     <li><a href="#">Корзина</a></li>
   </ul>
   <p>
-    <tel:+74954959595>+7 (495) 495 95 95</tel:>
+    <a href="tel:+74954959595">+7 495 495 95 95</a>
   </p>
-  <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
+  <a href="https://htmlacademy.ru/intensive/htmlcss">
+    <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
+  </a>
 </footer>
 
 </html>
