--- a/catalog.html
+++ b/catalog.html
@@ -105,10 +105,8 @@
     </section>
     <section>
       <h2>Список товаров</h2>
+      <h3>Сортировка</h3>
       <ul>
-        <li>
-          <p>Сортировка</p>
-        </li>
         <li>
           <button type="button">По цене</button>
         </li>
@@ -118,6 +116,8 @@
         <li>
           <button type="button">По популярности</button>
         </li>
+      </ul>
+      <ul>
         <li>
           <button type="button"></button>
         </li>
@@ -131,58 +131,87 @@
         <li>
           <a href="#">
             <h3>Любительская селфи-палка</h3>
-            <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <img src="https://via.placeholder.com/360x380" alt="product">
           </a>
           <p>
             1 100 руб.
-            <button type="button">В корзину</button>
-            <button type="button">Добавить к сравнению</button>
+          <ul>
+            <li>
+              <button type="button">В корзину</button>
+            </li>
+            <li>
+              <button type="button">Добавить к сравнению</button>
+            </li>
+          </ul>
           </p>
         </li>
         <li>
           <a href="#">
             <h3>Профессиональная селфи-палка</h3>
-            <img src="https://via.placeholder.com/360x380" alt="product">
           </a>
-          <p>1 500 руб.</p>
+          <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 500 руб.
+          <ul>
+            <li>
+              <button type="button">В корзину</button>
+            </li>
+            <li>
+              <button type="button">Добавить к сравнению</button>
+            </li>
+          </ul>
+          </p>
         </li>
         <li>
           <a href="#">
             <h3>Непотопляемая селфи-палка</h3>
-            <img src="https://via.placeholder.com/360x380" alt="product">
           </a>
-          <p>1 500 руб.</p>
+          <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 500 руб.
+          <ul>
+            <li>
+              <button type="button">В корзину</button>
+            </li>
+            <li>
+              <button type="button">Добавить к сравнению</button>
+            </li>
+          </ul>
+          </p>
         </li>
         <li>
           <a href="#">
             <h3>Селфи-палка "Следуй за мной"</h3>
-            <img src="https://via.placeholder.com/360x380" alt="product">
           </a>
-          <p>1 900 руб.</p>
+          <img src="https://via.placeholder.com/360x380" alt="product">
+          </a>
+          <p>1 900 руб.
+          <ul>
+            <li>
+              <button type="button">В корзину</button>
+            </li>
+            <li>
+              <button type="button">Добавить к сравнению</button>
+            </li>
+          </ul>
+          </p>
         </li>
       </ul>
       <ul>
-        <li>
-          <a>Назад</a>
-        </li>
-        <li>
-          <a>1</a>
-        </li>
-        <li>
-          <a href="#">2</a>
-        </li>
-        <li>
-          <a href="#">3</a>
-        </li>
-        <li>
-          <a href="#">Вперед</a>
-        </li>
+        <li><a>Назад</a></li>
+        <li><a>1</a></li>
+        <li><a href="#">2</a></li>
+        <li><a href="#">3</a></li>
+        <li><a href="#">Вперед</a></li>
       </ul>
     </section>
   </main>
 </body>
 <footer>
-  <img src="https://via.placeholder.com/163x35" alt="logo">
+  <a href="index.html">
+    <img src="https://via.placeholder.com/163x35" alt="logo">
+  </a>
   <p>г. Москва, ул. Строителей, 15</p>
   <ul>
     <li><a href="#">Доставка</a></li>
@@ -190,9 +219,15 @@
     <li><a href="#">Контакты</a></li>
   </ul>
   <ul>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="vk"></a></li>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="in"></a></li>
-    <li><a href="#"><img src="https://via.placeholder.com/32х31" alt="tw"></a></li>
+    <a href="#">
+      <li>vk</li>
+    </a>
+    <a href="#">
+      <li>inst</li>
+    </a>
+    <a href="#">
+      <li>tw</li>
+    </a>
   </ul>
   <ul>
     <li><a href="#">Войти</a></li>
@@ -200,9 +235,11 @@
     <li><a href="#">Корзина</a></li>
   </ul>
   <p>
-    <a href="tel:+74954959595">+7 (495) 495 95 95</a>
+    <a href="tel:+74954959595">+7 495 495 95 95</a>
   </p>
-  <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
+  <a href="https://htmlacademy.ru/intensive/htmlcss">
+    <img src="https://via.placeholder.com/27х33" alt="htmlacademy">
+  </a>
 </footer>
 
 </html>
