--- a/catalog.html
+++ b/catalog.html
@@ -132,7 +132,7 @@
           <a href="#">
             <h3>Любительская селфи-палка</h3>
           </a>
-          <img src="https://via.placeholder.com/360x380" alt="product">
+          <img src="img/catalog/item-1.png" width="360" height="380" alt="Любительская селфи-палка">
           </a>
           <p>
             1 100 руб.
@@ -150,7 +150,7 @@
           <a href="#">
             <h3>Профессиональная селфи-палка</h3>
           </a>
-          <img src="https://via.placeholder.com/360x380" alt="product">
+          <img src="img/catalog/item-2.png" width="360" height="380" alt="Профессиональная селфи-палка">
           </a>
           <p>1 500 руб.
           <ul>
@@ -167,7 +167,7 @@
           <a href="#">
             <h3>Непотопляемая селфи-палка</h3>
           </a>
-          <img src="https://via.placeholder.com/360x380" alt="product">
+          <img src="img/catalog/item-3.png" width="360" height="380" alt="Непотопляемая селфи-палка">
           </a>
           <p>1 500 руб.
           <ul>
@@ -184,7 +184,7 @@
           <a href="#">
             <h3>Селфи-палка "Следуй за мной"</h3>
           </a>
-          <img src="https://via.placeholder.com/360x380" alt="product">
+          <img src="img/catalog/item-4.png" width="360" height="380" alt="Селфи-палка Следуй за мной">
           </a>
           <p>1 900 руб.
           <ul>
