--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Девайс</title>
+  <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -53,7 +54,7 @@
   <main>
     <section>
       <h2>Слайдер</h2>
-      <img src="https://via.placeholder.com/384x486" alt="product">
+      <img src="img/palki/3palki.png" width="384" height="486" alt="Самая длинная палка">
       <p>Делай селфи, как Бен Стиллер!</p>
       <p>Самая длинная палка для селфи доступна в нашем магазине.<br>
         Восемь (Восемь, Карл!) метров длиной и весом всего 5 килограмм.</p>
@@ -126,22 +127,22 @@
       <ul>
         <li>
           <a href="https://www.dji.com/ru">
-            <img src="https://via.placeholder.com/260x100" alt="dji">
+            <img src="img/logo/logo-dji.png" width="260" height="100" alt="DJI">
           </a>
         </li>
         <li>
           <a href="http://www.sp-gadgets.com">
-            <img src="https://via.placeholder.com/260x100" alt="sp-gadgets">
+            <img src="img/logo/logo-spgadets.png" width="260" height="100" alt="SP-Gadgets">
           </a>
         </li>
         <li>
           <a href="https://gopro.com/ru/ru/">
-            <img src="https://via.placeholder.com/260x100" alt="gopro">
+            <img src="img/logo/logo-gopro.png" width="260" height="100" alt="GoPro">
           </a>
         </li>
         <li>
           <a href="https://www.vive.com/ru/">
-            <img src="https://via.placeholder.com/260x100" alt="vive">
+            <img src="img/logo/logo-vive.png" width="260" height="100" alt="VIVE">
           </a>
         </li>
       </ul>
@@ -163,7 +164,7 @@
       <h2>Контакты</h2>
       <p>Вы можете забрать товар сами, заехав в наш офис. Заодно, вы сможете<br>
         проверить работоспособность покупки. Всякое бывает.</p>
-      <img src="https://via.placeholder.com/560x222" alt="map">
+      <img src="img/map/map1.png" width="560" height="222" alt="Карта с нашим местоположением">
       <button type="button">Напишите нам</button>
     </section>
   </main>
