Исправил ошибки в Index.html

--- a/index.html
+++ b/index.html
@@ -14,22 +14,18 @@
       <img src="https://via.placeholder.com/163x35" alt="logo">
     </a>
     <section>
+      <form action="https://echo.htmlacademy.ru" method="POST">
+        <input id="search" type="search" placeholder="Поиск по сайту">
+      </form>
       <ul>
         <li>
-          <form action="https://echo.htmlacademy.ru" method="POST">
-            <input id="search" type="search" placeholder="Поиск по сайту">
-          </form>
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <button type="button">Войти</button>
+          <a href="#">Войти</a>
         </li>
         <li>
-          <button type="button">Сравнить</button>
+          <a href="#">Сравнить</a>
         </li>
         <li>
-          <button type="button">Корзина</button>
+          <a href="#">Корзина</a>
         </li>
       </ul>
     </section>
@@ -71,35 +67,41 @@
         </li>
       </ul>
       <ul>
-        <li>8,5 м</li>
-        <li>Длина палки</li>
-        <li>5 кг</li>
-        <li>Вес палки</li>
-        <li>Карбон</li>
-        <li>Материал</li>
+        <li>
+          <p>8,5 м</p>
+          <p>Длина палки</p>
+        </li>
+        <li>
+          <p>5 кг</p>
+          <p>Вес палки</p>
+        </li>
+        <li>
+          <p>Карбон</p>
+          <p>Материал</p>
+        </li>
       </ul>
     </section>
     <section>
       <h2>Категории товаров</h2>
       <ul>
-        <a href="#">
-          <li>Виртуальная реальность</li>
-        </a>
-        <a href="#">
-          <li>Моноподы для селфи</li>
-        </a>
-        <a href="#">
-          <li>Экшн-камеры</li>
-        </a>
-        <a href="#">
-          <li>Фитнес-браслеты</li>
-        </a>
-        <a href="#">
-          <li>Умные часы</li>
-        </a>
-        <a href="#">
-          <li>Квадрокоптеры</li>
-        </a>
+        <li>
+          <a href="#">Виртуальная реальность</a>
+        </li>
+        <li>
+          <a href="#">Моноподы для селфи</a>
+        </li>
+        <li>
+          <a href="#">Экшн-камеры</a>
+        </li>
+        <li>
+          <a href="#">Фитнес браслеты</a>
+        </li>
+        <li>
+          <a href="#">Умные часы</a>
+        </li>
+        <li>
+          <a href="#">Квадрокоптеры</a>
+        </li>
       </ul>
     </section>
     <section>
